--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mqtt-landroid-bridge",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "homepage": "https://github.com/nefiertsrebliS/mqtt-landroid-bridge",
   "description": "Bridge between Worx Landroid mower (Cloud) and IP Symcon",
   "keywords": [
@@ -12,6 +12,6 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "iobroker.worx": "^1.3.0"
+    "iobroker.worx": "github:iobroker-community-adapters/ioBroker.worx"
   }
 }
