Add docker support
This adds a Dockerfile and the option to configure the application
using environment variables, which is useful in containerized
environments.

--- a/config.json
+++ b/config.json
@@ -10,7 +10,9 @@
 	"mower": [
 		{
 		    "sn": "serialNumberOfYourMower",
-		    "topic": "yourbestmower"
+		    "topic": "yourbestmower",
+			"statusTopic": "",
+			"dataTopic": ""
 		}
 	],
     "logLevel": "info"
