--- a/systemd-script/mqtt-landroid-bridge.service
+++ b/systemd-script/mqtt-landroid-bridge.service
@@ -1,6 +1,6 @@
 [Unit]
 Description= node-app to connect your worxCloud with IP-Symcon
-After=remote-fs.target network.target
+After=remote-fs.target network-online.target
 
 [Service]
 # Change both to your username, its a bad idea to run as root.
